--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
@@ -55,18 +55,19 @@
 			<h1>Manage Users | Create New User</h1>
 		</div>
 
-		<div th:if="${message}"
-			class="alert alert-success text-center" th:text="${message}">[[${message}]]</div>
+		<div th:if="${message}" class="alert alert-success text-center"
+			th:text="${message}">[[${message}]]</div>
 
 		<form th:action="@{/users/save}" method="post"
-			style="max-width: 700px; margin: 0 auto;" th:object="${user}">
+			style="max-width: 700px; margin: 0 auto;" th:object="${user}"
+			id="userForm" onsubmit="return checkEmailUnique(this);">
 			<div class="border border-secondary rounded p-3">
 
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">E-mail</label>
 					<div class="col-sm-8">
 						<input type="email" th:field="*{email}" class="form-control"
-							required minlength="8" maxlength="128" />
+							required minlength="8" maxlength="128" id="email" />
 					</div>
 				</div>
 
@@ -125,7 +126,26 @@
 			</div>
 		</form>
 
+		<div class="modal fade text-center" id="modalDialog">
+			<div class="modal-dialog">
+				<div class="modal-content">
 
+					<div class="modal-header">
+						<h4 class="modal-title" id="modalTitle">Warning</h4>
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+					</div>
+
+					<div class="modal-body">
+						<span id="modalBody"></span>
+					</div>
+
+					<div class="modal-footer">
+						<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+					</div>
+
+				</div>
+			</div>
+		</div>
 
 		<div>
 			<p>Shopme Control Panel - Copyright &copy;shopme</p>
@@ -135,10 +155,70 @@
 
 	<script type="text/javascript">
 		$(document).ready(function() {
+
 			$("#buttonCancel").on('click', function() {
 				window.location = "[[@{/users}]]";
 			});
+
+			/* $("#userForm").submit(function(e) {
+				var url = "[[@{/users/check_email}]]";
+				var userEmail = $("#email").val();
+				var csrfValue = $("input[name='_csrf']").val();
+				params = {email: userEmail, _csrf: csrfValue};
+				
+				$.post(url, params, function(response){
+					if(response == "OK"){
+						alert('We are good to go');
+					}else if(response == "Duplicated"){
+						alert("There is another user having the email "+userEmail);
+					}
+					
+				});
+				
+				e.preventDefault();
+			}); */
+
 		});
+
+		function checkEmailUnique(form) {
+
+			var url = "[[@{/users/check_email}]]";
+			var userEmail = $("#email").val();
+			var csrfValue = $("input[name='_csrf']").val();
+			params = {
+				email : userEmail,
+				_csrf : csrfValue
+			};
+
+			$('#modalDialog').modal();
+
+			$.post(
+					url,
+					params,
+					function(response) {
+						if (response == "OK") {
+							form.submit();
+						} else if (response == "Duplicated") {
+							showModalDialog("Warning!",
+									"There is another User having the Email"
+											+ userEmail);
+						} else {
+							showModalDialog("Error",
+									"Unknown response from Server");
+						}
+
+					}).fail(function() {
+				showModalDialog("Error", "Could not Connect to Server.");
+			});
+
+			return false;
+		}
+
+		function showModalDialog(title, message) {
+			$('#modalTitle').text(title);
+			$('#modalBody').text(message);
+			$('#modalDialog').modal();
+		}
 	</script>
 
 </body>
