--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
@@ -6,7 +6,7 @@
 <meta name="viewport"
 	content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 
-<title>Welcome to the Admin Page</title>
+<title>[[${pageTitle}]]</title>
 <link rel="stylesheet" type="text/css"
 	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
 <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
@@ -52,7 +52,7 @@
 
 
 		<div>
-			<h1>Manage Users | Create New User</h1>
+			<h1>Manager Users | [[${pageTitle}]]</h1>
 		</div>
 
 		<div th:if="${message}" class="alert alert-success text-center"
@@ -61,6 +61,7 @@
 		<form th:action="@{/users/save}" method="post"
 			style="max-width: 700px; margin: 0 auto;" th:object="${user}"
 			id="userForm" onsubmit="return checkEmailUnique(this);">
+			<input type="hidden" th:field="*{id}" />
 			<div class="border border-secondary rounded p-3">
 
 				<div class="form-group row">
@@ -92,7 +93,8 @@
 					<label class="col-sm-4 col-form-label">Password</label>
 					<div class="col-sm-8">
 						<input type="password" th:field="*{password}" class="form-control"
-							required minlength="8" maxlength="20" />
+							th:required="${!editMode}" minlength="8" maxlength="20"
+							th:placeholder="${editMode ? 'Leave Blank if you Dont want to change your Password': 'Enter Password'}" />
 					</div>
 				</div>
 
@@ -131,7 +133,7 @@
 				<div class="modal-content">
 
 					<div class="modal-header">
-						<h4 class="modal-title" id="modalTitle">Warning</h4>
+						<h4 class="modal-title" id="modalTitle"></h4>
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
 					</div>
 
@@ -160,24 +162,6 @@
 				window.location = "[[@{/users}]]";
 			});
 
-			/* $("#userForm").submit(function(e) {
-				var url = "[[@{/users/check_email}]]";
-				var userEmail = $("#email").val();
-				var csrfValue = $("input[name='_csrf']").val();
-				params = {email: userEmail, _csrf: csrfValue};
-				
-				$.post(url, params, function(response){
-					if(response == "OK"){
-						alert('We are good to go');
-					}else if(response == "Duplicated"){
-						alert("There is another user having the email "+userEmail);
-					}
-					
-				});
-				
-				e.preventDefault();
-			}); */
-
 		});
 
 		function checkEmailUnique(form) {
@@ -185,12 +169,12 @@
 			var url = "[[@{/users/check_email}]]";
 			var userEmail = $("#email").val();
 			var csrfValue = $("input[name='_csrf']").val();
+			var userId = $("#id").val();
 			params = {
+				id : userId,
 				email : userEmail,
 				_csrf : csrfValue
 			};
-
-			$('#modalDialog').modal();
 
 			$.post(
 					url,
