--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
@@ -60,12 +60,13 @@
 
 		<form th:action="@{/users/save}" method="post"
 			style="max-width: 700px; margin: 0 auto;" th:object="${user}"
-			id="userForm" onsubmit="return checkEmailUnique(this);">
+			enctype="multipart/form-data" id="userForm"
+			onsubmit="return checkEmailUnique(this);">
 			<input type="hidden" th:field="*{id}" />
 			<div class="border border-secondary rounded p-3">
 
 				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">E-mail</label>
+					<label class="col-sm-4 col-form-label">E-mail:</label>
 					<div class="col-sm-8">
 						<input type="email" th:field="*{email}" class="form-control"
 							required minlength="8" maxlength="128" id="email" />
@@ -74,7 +75,7 @@
 
 
 				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">First Name</label>
+					<label class="col-sm-4 col-form-label">First Name:</label>
 					<div class="col-sm-8">
 						<input type="text" th:field="*{firstName}" class="form-control"
 							required minlength="2" maxlength="45" />
@@ -82,7 +83,7 @@
 				</div>
 
 				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">Last Name</label>
+					<label class="col-sm-4 col-form-label">Last Name:</label>
 					<div class="col-sm-8">
 						<input type="text" th:field="*{lastName}" class="form-control"
 							required minlength="2" maxlength="45" />
@@ -90,7 +91,7 @@
 				</div>
 
 				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">Password</label>
+					<label class="col-sm-4 col-form-label">Password:</label>
 					<div class="col-sm-8">
 						<input type="password" th:field="*{password}" class="form-control"
 							th:required="${!editMode}" minlength="8" maxlength="20"
@@ -100,7 +101,7 @@
 
 
 				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">Roles</label>
+					<label class="col-sm-4 col-form-label">Roles:</label>
 					<div class="col-sm-8">
 						<th:block th:each="role : ${listRoles}">
 							<input type="checkbox" th:field="*{roles}" th:text="${role.name}"
@@ -112,9 +113,21 @@
 				</div>
 
 				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">Enabled</label>
+					<label class="col-sm-4 col-form-label">Enabled:</label>
 					<div class="col-sm-8">
 						<input type="checkbox" th:field="*{enabled}" />
+					</div>
+				</div>
+
+				<div class="form-group row">
+					<label class="col-sm-4 col-form-label">Photo:</label>
+					<div class="col-sm-4">
+						<input type="hidden" th:field="*{photos}" /> <input type="file"
+							id="imageInput" name="image" />
+					</div>
+					<div class="col-sm-4">
+						<img th:src="@{/images/ShopmeAdminSmall.png}" id="imageView"
+							alt="Image Preview" style="max-width: 200px; max-height: 200px;" />
 					</div>
 				</div>
 
@@ -156,13 +169,44 @@
 	</div>
 
 	<script type="text/javascript">
-		$(document).ready(function() {
+		$(document)
+				.ready(
+						function() {
 
-			$("#buttonCancel").on('click', function() {
-				window.location = "[[@{/users}]]";
-			});
+							$("#buttonCancel").on('click', function() {
+								window.location = "[[@{/users}]]";
+							});
 
-		});
+							$('#imageInput')
+									.on(
+											'change',
+											function(event) {
+												var image = this.files[0];
+												var fileSize = this.files[0].size;
+												if (fileSize > 1048576) {
+													this
+															.setCustomValidity("You must choose an image less than 1MB!");
+													showModalDialog("Error",
+															"You must choose an image less than 1MB!");
+													this.reportValidity();
+												} else {
+													this.setCustomValidity("");
+													showImageThumbnail(this);
+												}
+
+											});
+
+						});
+
+		function showImageThumbnail(fileInput) {
+			var file = fileInput.files[0];
+			var reader = new FileReader();
+			reader.onload = function(e) {
+				$('#imageView').attr("src", e.target.result);
+			};
+
+			reader.readAsDataURL(file);
+		}
 
 		function checkEmailUnique(form) {
 
