Adding Sorting, by Column header and addition to Pagination

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -60,32 +60,77 @@
 			<h1>Manage Users</h1>
 			<a th:href="@{/users/new}">Create New User</a>
 		</div>
-
-<!-- 		<div th:if="${totalItems > 0}"
-			class="input-group mb-3 justify-content-center">
-			Set the Page Size
-			<div class="input-group-prepend">
-				<label class="input-group-text" for="PageSizeSelect">PageSize:
-				</label>
-			</div>
-			<select class="custom-select" id="PageSizeSelect">
-				<option th:each="page : ${pageSize}" th:value="${page}"
-					th:text="${page}" th:selected="${page==3}"></option>
-			</select>
-		</div> -->
-
 		<div>
 			<table
 				class="table table-bordered table-striped table-hover table-responsive-xl">
 				<thead class="thead-dark">
 					<tr>
-						<th>User ID</th>
+						<th>
+						
+						<a th:if="${sortField != 'id'}"
+						th:href="@{'/users/page/' + ${currentPage} + '?sortField=id&sortDir=' +${sortDir} }" class="cursor-hand text-white">ID</a>
+						<a th:if="${sortField == 'id'}"
+						th:href="@{'/users/page/' + ${currentPage} + '?sortField=id&sortDir=' +${reverseSortDir} }" class="cursor-hand text-white">ID</a>
+						<span th:if="${sortField == 'id'}"
+						th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down' }"
+						></span>
+						
+						</th>
 						<th>Photos</th>
-						<th>Email</th>
-						<th>First Name</th>
-						<th>Last Name</th>
+						
+						<th>
+						
+						<a th:if="${sortField != 'email'}"
+						th:href="@{'/users/page/' + ${currentPage} + '?sortField=email&sortDir=' +${sortDir} }" class="cursor-hand text-white">Email</a>
+						<a th:if="${sortField == 'email'}"
+						th:href="@{'/users/page/' + ${currentPage} + '?sortField=email&sortDir=' +${reverseSortDir} }" class="cursor-hand text-white">Email</a>
+						<span th:if="${sortField == 'email'}"
+						th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down' }"
+						></span>
+						
+						</th>
+						
+						<th>
+						
+						<a th:if="${sortField != 'firstName'}"
+						th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDir=' +${sortDir} }" class="cursor-hand text-white">First Name</a>
+						<a th:if="${sortField == 'firstName'}"
+						th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDir=' +${reverseSortDir} }" class="cursor-hand text-white">First Name</a>
+						<span th:if="${sortField == 'firstName'}"
+						th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down' }"
+						></span>
+						
+						</th>
+						
+						
+						<th>
+						
+						<a th:if="${sortField != 'lastName'}"
+						th:href="@{'/users/page/' + ${currentPage} + '?sortField=lastName&sortDir=' +${sortDir} }" class="cursor-hand text-white">Last Name</a>
+						<a th:if="${sortField == 'lastName'}"
+						th:href="@{'/users/page/' + ${currentPage} + '?sortField=lastName&sortDir=' +${reverseSortDir} }" class="cursor-hand text-white">Last Name</a>
+						<span th:if="${sortField == 'lastName'}"
+						th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down' }"
+						></span>
+						
+						</th>
+						
+						
 						<th>Roles</th>
-						<th>Enabled</th>
+						
+						<th>
+						
+						<a th:if="${sortField != 'enabled'}"
+						th:href="@{'/users/page/' + ${currentPage} + '?sortField=enabled&sortDir=' +${sortDir} }" class="cursor-hand text-white">Enabled</a>
+						<a th:if="${sortField == 'enabled'}"
+						th:href="@{'/users/page/' + ${currentPage} + '?sortField=enabled&sortDir=' +${reverseSortDir} }" class="cursor-hand text-white">Enabled</a>
+						<span th:if="${sortField == 'enabled'}"
+						th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down' }"
+						></span>
+						
+						</th>
+						
+						
 						<th></th>
 					</tr>
 				</thead>
@@ -95,7 +140,7 @@
 						<td><i th:if="${user.id == null}"
 							class="fas fa-portrait fa-3x icon-dark"></i> <img
 							th:src="@{${user.photosImagePath}}" class="img-fluid"
-							style="max-width: 200px; max-height: 200px;" /></td>
+							style="max-width: 100px; max-height: 100px;" /></td>
 						<td>[[${user.email}]]</td>
 						<td>[[${user.firstName}]]</td>
 						<td>[[${user.lastName}]]</td>
@@ -136,25 +181,25 @@
 				<ul class="pagination justify-content-center">
 					<li
 						th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}"><a
-						class="page-link" th:href="@{/users/page/1}">First</a></li>
+						class="page-link" th:href="@{/users/page/1 +'?sortField='+${sortField}+'&sortDir=' +${sortDir}  }">First</a></li>
 					<li
 						th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}"><a
 						class="page-link"
-						th:href="@{'/users/page/' + ${(currentPage - 1 <= 0) ? 1 : (currentPage -1)} }">Previous</a></li>
+						th:href="@{'/users/page/' + ${(currentPage - 1 <= 0) ? 1 : (currentPage -1)} +'?sortField='+${sortField}+'&sortDir=' +${sortDir} }">Previous</a></li>
 
 					<li
 						th:class="${currentPage != i ? 'page-item' : 'page-item active'}"
 						th:each="i : ${#numbers.sequence(1, totalPages)}"><a
-						class="page-link" th:href="@{'/users/page/' + ${i} }">
+						class="page-link" th:href="@{'/users/page/' + ${i} +'?sortField='+${sortField}+'&sortDir=' +${sortDir} }">
 							[[${i}]]</a></li>
 
 					<li
 						th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}"><a
 						class="page-link"
-						th:href="@{'/users/page/' + ${(currentPage+1)} }">Next</a></li>
+						th:href="@{'/users/page/' + ${(currentPage+1)} +'?sortField='+${sortField}+'&sortDir=' +${sortDir} }">Next</a></li>
 					<li
 						th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}"><a
-						class="page-link" th:href="@{'/users/page/' + ${totalPages}}">Last</a></li>
+						class="page-link" th:href="@{'/users/page/' + ${totalPages} +'?sortField='+${sortField}+'&sortDir=' +${sortDir} }">Last</a></li>
 				</ul>
 			</nav>
 		</div>
