--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -59,6 +59,12 @@
     <div>
         <h1>Manage Users</h1>
         <a th:href="@{/users/new}">Create New User</a>
+        &nbsp;&nbsp;
+        <a th:href="@{/users/export/csv}">Export to CSV</a>
+        &nbsp;&nbsp;
+        <a th:href="@{/users/export/pdf}">Export to PDF</a>
+        &nbsp;&nbsp;
+        <a th:href="@{/users/export/excel}">Export to Excel</a>
     </div>
 
     <div class="m-1">
