--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/static/style.css
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/static/style.css
@@ -15,7 +15,28 @@
 }
 .cursor-hand{
 	cursor: pointer;
+	text-decoration: none;
 }
 .cursor-hand:hover{
 	text-decoration: none;
+}
+@media screen and (max-width: 768px) {
+	div.full-details{display: none;}
+	div.less-details{display: block;}
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+	div.full-details{
+		display: block;
+	}
+	div.less-details{
+		display: none;
+	}
+	.hideable-column{display: none;}
+}
+@media screen and (min-width: 1024px) {
+	/*small screen*/
+	div.less-details{
+		display: none;
+	}
+	.hideable-column{display: table-cell;}
 }
