--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -58,13 +58,21 @@
 
     <div>
         <h1>Manage Users</h1>
-        <a th:href="@{/users/new}">Create New User</a>
+        <a th:href="@{/users/new}">
+            <i class="fas fa-user-plus fa-3x icon-dark cursor-hand"></i>
+        </a>
         &nbsp;&nbsp;
-        <a th:href="@{/users/export/csv}">Export to CSV</a>
+        <a th:href="@{/users/export/csv}">
+            <i class="fas fa-file-csv fa-3x icon-dark cursor-hand"></i>
+        </a>
         &nbsp;&nbsp;
-        <a th:href="@{/users/export/pdf}">Export to PDF</a>
+        <a th:href="@{/users/export/pdf}">
+            <i class="fas fa-file-pdf fa-3x icon-dark cursor-hand"></i>
+        </a>
         &nbsp;&nbsp;
-        <a th:href="@{/users/export/excel}">Export to Excel</a>
+        <a th:href="@{/users/export/excel}">
+            <i class="fas fa-file-excel fa-3x icon-dark cursor-hand"></i>
+        </a>
     </div>
 
     <div class="m-1">
@@ -73,34 +81,39 @@
             <input type="hidden" name="sortDir" th:value="${sortDir}">
             <input class="form-control mr-sm-2" type="search" placeholder="Filter" aria-label="Search" name="keyword"
                    id="keyword" required th:value="${keyword}">
-            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>&nbsp;&nbsp;
-            <button class="btn btn-outline-secondary my-2 my-sm-0" type="button" onclick="clearFilter()">Clear</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0 fas fa-search fa-3x" type="submit"></button>&nbsp;&nbsp;
+            <button class="btn btn-outline-secondary my-2 my-sm-0 fas fa-eraser fa-3x" type="button"
+                    onclick="clearFilter()"></button>
         </form>
     </div>
 
-    <div>
+    <div class="full-details">
         <table
                 class="table table-bordered table-striped table-hover table-responsive-xl">
             <thead class="thead-dark">
             <tr>
-                <th th:replace="fragments :: column_link('id', 'ID')"></th>
+                <th class="hideable-column">
+                <th th:replace="fragments :: column_link('id', 'ID', 'tag')"></th>
+                </th>
                 <th>Photos</th>
-                <th th:replace="fragments :: column_link('email', 'E-mail')"></th>
-                <th th:replace="fragments :: column_link('firstName', 'First Name')"></th>
-                <th th:replace="fragments :: column_link('lastName', 'Last Name')"></th>
+                <th class="hideable-column">
+                <th th:replace="fragments :: column_link('email', 'E-mail', 'tag')"></th>
+                </th>
+                <th th:replace="fragments :: column_link('firstName', 'First Name', 'none')"></th>
+                <th th:replace="fragments :: column_link('lastName', 'Last Name', 'none')"></th>
                 <th>Roles</th>
-                <th th:replace="fragments :: column_link('enabled', 'Enabled')"></th>
+                <th th:replace="fragments :: column_link('enabled', 'Enabled', 'none')"></th>
                 <th></th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="user : ${listUsers}">
-                <td>[[${user.id}]]</td>
+                <td class="hideable-column">[[${user.id}]]</td>
                 <td><i th:if="${user.id == null}"
                        class="fas fa-portrait fa-3x icon-dark"></i> <img
                         th:src="@{${user.photosImagePath}}" class="img-fluid"
                         style="max-width: 100px; max-height: 100px;"/></td>
-                <td>[[${user.email}]]</td>
+                <td class="hideable-column">[[${user.email}]]</td>
                 <td>[[${user.firstName}]]</td>
                 <td>[[${user.lastName}]]</td>
                 <td>[[${user.roles}]]</td>
@@ -124,6 +137,29 @@
             </tr>
             </tbody>
         </table>
+    </div>
+    <div class="less-details">
+        <div th:each="user: ${listUsers}" class="row m-1">
+            <div class="col">
+                <i th:if="${user.id == null}"
+                   class="fas fa-portrait fa-3x icon-dark"></i>
+                <img th:src="@{${user.photosImagePath}}" class="img-fluid"
+                     style="max-width: 100px; max-height: 100px;"/>
+            </div>
+            <div class="col">
+                <div>[[${user.fullName}]]</div>
+                <div>[[${user.roles}]]</div>
+            </div>
+            <div class="mt-2">
+
+                <a title="Edit this User" class="cursor-hand" th:href="@{'/users/edit/'+${user.id} }"> <i
+                        class="fas fa-edit fa-2x icon-green"></i></a> &nbsp;
+                <a th:href="@{'/users/delete/'+${user.id}}" class="cursor-hand link-delete"> <i
+                        class="fas fa-trash fa-2x icon-dark"> </i></a>
+
+            </div>
+            <div>&nbsp;</div>
+        </div>
     </div>
 
     <div class="text-center m-1" th:if="${totalItems > 0}">
@@ -218,7 +254,8 @@
         $('#modalBody').text(message);
         $('#modalDialog').modal();
     }
-    function clearFilter(){
+
+    function clearFilter() {
         window.location = "[[@{/users}]]"
     }
 </script>
