--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/login.html
@@ -26,6 +26,10 @@
       <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
     </div>
 
+    <div th:if="${param.logout}">
+      <p class="text-danger">You have been logged out.</p>
+    </div>
+
     <div class="border border-secondary rounded p-3">
         <p>Access to ShopMe Control Panel</p>
       <p>
