--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head th:fragment="head(title)">
     <meta charset="ISO-8859-1">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
+
+    <title>[[${title}]]</title>
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/webjars/font-awesome/5.15.1/css/all.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
+    <script type="text/javascript"
+            th:src="@{/webjars/font-awesome/5.15.1/js/all.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script type="text/javascript"
+            th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script type="text/javascript"
+            th:src="@{/js/common.js}"></script>
 </head>
+
 <body>
 
 <th th:fragment="column_link(fieldName, columnLabel, removeTag)" th:remove="${removeTag}">
@@ -19,6 +38,64 @@
 <a th:fragment="hyperlink(page, text)" class="page-link"
         th:href="@{'/users/page/'+${page} +'?sortField='+${sortField}+'&sortDir=' +${sortDir} +${(keyword!=null) ? '&keyword='+keyword : ''}  }">
     [[${text}]]</a>
+
+
+<footer th:fragment="footer">
+    <div>
+        <p>Shopme Control Panel - Copyright &copy;shopme</p>
+    </div>
+</footer>
+
+<div th:fragment="topNavBar">
+    <form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+        <input type="submit" />
+    </form>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <a class="navbar-brand" th:href="@{/}"> <img
+                th:src="@{/images/ShopmeAdminSmall.png}"/>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#topNavbar"
+                aria-controls="topNavbar" aria-expanded="false"
+                aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="topNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" th:href="@{/users}">Users</a></li>
+                <li class="nav-item"><a class="nav-link"
+                                        th:href="@{/categories}">Categories</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/brands}">Brands</a></li>
+                <li class="nav-item"><a class="nav-link"
+                                        th:href="@{/products}">Products</a></li>
+                <li class="nav-item"><a class="nav-link"
+                                        th:href="@{/customers}">Customers</a></li>
+                <li class="nav-item"><a class="nav-link"
+                                        th:href="@{/Shipping}">Shipping</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/report}">Sales
+                    Report</a></li>
+                <li class="nav-item"><a class="nav-link"
+                                        th:href="@{/articles}">Articles</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/menus}">Menus</a></li>
+                <li class="nav-item"><a class="nav-link"
+                                        th:href="@{/settings}">Settings</a>
+                </li>
+                <li>
+                    <span class="fas fa-user fa-2x icon-silver"></span>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle"
+                       data-toggle="dropdown"
+                       sec:authentication="principal"></a>
+
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" id="logoutLink">LogOut</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
 
 </body>
 </html>
