--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/login.html
@@ -1,18 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta charset="ISO-8859-1">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport"
-        content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-
-  <title>Login - Shopme Admin</title>
-  <link rel="stylesheet" type="text/css"
-        th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
-  <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-  <script type="text/javascript"
-          th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-</head>
+<head th:replace="fragments :: head('Please Sign In')"></head>
 <body>
 <div class="container-fluid text-center">
 
@@ -45,9 +33,7 @@
     </div>
   </form>
 
-  <div>
-    <p>Shopme Control Panel - Copyright &copy;shopme</p>
-  </div>
+  <footer th:replace="fragments :: footer"></footer>
 </div>
 </body>
 </html>
