--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
@@ -86,7 +86,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle"
                        data-toggle="dropdown"
-                       sec:authentication="principal"></a>
+                       sec:authentication="principal.username"></a>
 
                     <div class="dropdown-menu">
                         <a class="dropdown-item" id="logoutLink">LogOut</a>
