--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -2,17 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       >
-<head th:replace="fragments :: head('Shopme - HomePage')"></head>
+<head th:replace="~{fragments :: head('Shopme - HomePage')}"></head>
 <body>
 <div class="container-fluid">
 
-   <div th:replace="fragments :: topNavBar"></div>
+   <div th:replace="~{fragments :: topNavBar}"></div>
     <div>
         <h1>Developed by Nurudeen Abdulmalik</h1>
         <h1>Developed by Nurudeen Abubakr</h1>
     </div>
 
-    <footer th:replace="fragments :: footer"></footer>
+    <footer th:replace="~{fragments :: footer}"></footer>
 </div>
 </body>
 </html>
