--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/login.html
@@ -27,6 +27,8 @@
       <p>
         <input type="password" name="password" id="password" class="form-control" placeholder="Enter Password" required />
       </p>
+      
+      <p><input type="checkbox" name="remember-me" id="rememberMe" />&nbsp;Remember me</p>
       <p>
         <input type="submit" value="Login" class="btn btn-primary">
       </p>
