Update Code, 1. Add Method to ShopMeUserDetial 2. User Edit form 3. Refactoring

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 <body>
 <div class="container-fluid">
 
-   <div th:replace="~{fragments :: topNavBar}"></div>
+   <div th:replace="~{navigation :: topNavBar}"></div>
     <div>
         <h1>Developed by Nurudeen Abdulmalik</h1>
         <h1>Developed by Nurudeen Abubakr</h1>
