--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container-fluid">
 
-    <div th:replace="~{fragments :: topNavBar}"></div>
+    <div th:replace="~{navigation :: topNavBar}"></div>
 
     <div>
         <h1>Manage Users</h1>
