--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/account_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/account_form.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments :: head('Shopme - Add User')}"></head>
+<head th:replace="~{fragments :: head('Shopme - Update User Info')}"></head>
 <body>
 	<div class="container-fluid">
 		<div th:replace="~{navigation :: topNavBar}"></div>
 
-		<div>
-			<h1>Manager Users | [[${pageTitle}]]</h1>
+		<div class="text-center">
+			<h1 class="text-center">Your Account Information.</h1>
 		</div>
 
 		<div th:if="${message}" class="alert alert-success text-center"
 			th:text="${message}">[[${message}]]</div>
 
-		<form th:action="@{/users/save}" method="post"
+		<form th:action="@{/account/update}" method="post"
 			style="max-width: 700px; margin: 0 auto;" th:object="${user}"
 			enctype="multipart/form-data" id="userForm"
 			onsubmit="return checkEmailUnique(this);">
@@ -47,22 +47,27 @@
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Password:</label>
 					<div class="col-sm-8">
-						<input type="password" th:field="*{password}" class="form-control"
-							th:required="${!editMode}" minlength="8" maxlength="20"
-							th:placeholder="${editMode ? 'Leave Blank if you Dont want to change your Password': 'Enter Password'}" />
+						<input type="password" id="password" th:field="*{password}" class="form-control"
+							   minlength="8" maxlength="20"
+							   oninput="checkPasswordMatch(document.getElementById('confirmPassword'))"
+							placeholder="Leave Blank if you Don't want to change your Password" />
 					</div>
 				</div>
 
+				<div class="form-group row">
+					<label class="col-sm-4 col-form-label">Confirm Password:</label>
+					<div class="col-sm-8">
+						<input type="password" id="confirmPassword" class="form-control"
+							   minlength="8" maxlength="20"
+							   oninput="checkPasswordMatch(this)"
+							   placeholder="Leave Blank if you Don't want to change your Password" />
+					</div>
+				</div>
 
 				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">Roles:</label>
+					<label class="col-sm-4 col-form-label">Assigned Roles:</label>
 					<div class="col-sm-8">
-						<th:block th:each="role : ${listRoles}">
-							<input type="checkbox" th:field="*{roles}" th:text="${role.name}"
-								th:value="${role.id}" class="m-2" />
-							<small>[[${role.description}]]</small>
-							<br />
-						</th:block>
+						<span><b>[[${user.roles}]]</b></span>
 					</div>
 				</div>
 
@@ -80,7 +85,8 @@
 							id="imageInput" name="image" />
 					</div>
 					<div class="col-sm-4">
-						<img th:src="@{/images/ShopmeAdminSmall.png}" id="imageView"
+						<img id="imageView"
+							 th:src="@{${user.photosImagePath}}"
 							alt="Image Preview" style="max-width: 200px; max-height: 200px;" />
 					</div>
 				</div>
