--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/navigation.html
@@ -11,7 +11,7 @@
     <input type="submit" />
   </form>
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-    <a class="navbar-brand" th:href="@{/}"> <img
+    <a class="navbar-brand" th:href="@{/static}"> <img
             th:src="@{/images/ShopmeAdminSmall.png}"/>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
