--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -2,11 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       >
-<head th:replace="~{fragments :: head('Shopme - HomePage')}"></head>
+<head th:replace="~{fragments/fragments :: head('Shopme - HomePage')}"></head>
 <body>
 <div class="container-fluid">
 
-   <div th:replace="~{navigation :: topNavBar}"></div>
+   <div th:replace="~{fragments/navigation :: topNavBar}"></div>
 
     <div class="text-center">
         Welcome <a th:href="@{/account}" sec:authentication="principal.fullname"></a>
@@ -18,7 +18,7 @@
         <h1>Developed by Nurudeen Abubakr</h1>
     </div>
 
-    <footer th:replace="~{fragments :: footer}"></footer>
+    <footer th:replace="~{fragments/fragments :: footer}"></footer>
 </div>
 </body>
 </html>
