--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments :: head('Please Sign In')}"></head>
+<head th:replace="~{fragments/fragments :: head('Please Sign In')}"></head>
 <body>
 <div class="container-fluid text-center">
 
@@ -35,7 +35,7 @@
     </div>
   </form>
 
-  <footer th:replace="~{fragments :: footer}"></footer>
+  <footer th:replace="~{fragments/fragments :: footer}"></footer>
 </div>
 </body>
 </html>
